kbase-extension/static/kbase/css/kbaseNarrative.css
/* ... */
button.kb-method-run:hover {
    background-color: #1E88E5;
}


/***********
 * END of kbaseNarrFunc.css
 ***********/


/*********
 * From kbaseData.css
 *********/
/*
For data in KBase workspace
*/
.modal-body {
    max-height: 100%;
}

/* === Tooltips  === */
/* see bootstrap styles, e.g. bootstrap.css, for the original definitions */
div[class="tooltip-inner"] {
    max-width: 400px;
    white-space: pre-wrap;
    text-align: left;
}
.notebook_app .tooltip {
    z-index: 2000 !important;
}
.notebook_app .tooltip-inner {
    background-color: #1B69B6;
}
.notebook_app .tooltip.top .tooltip-arrow {
  border-top-color: #1B69B6;
}
.notebook_app .tooltip.top-left .tooltip-arrow {
  border-top-color: #1B69B6;
}
.notebook_app .tooltip.top-right .tooltip-arrow {
  border-top-color: #1B69B6;
}
.notebook_app .tooltip.right .tooltip-arrow {
  border-right-color: #1B69B6;
}
.notebook_app .tooltip.left .tooltip-arrow {
  border-left-color: #1B69B6;
}
.notebook_app .tooltip.bottom .tooltip-arrow {
  border-bottom-color: #1B69B6;
}
.notebook_app .tooltip.bottom-left .tooltip-arrow {
  border-bottom-color: #1B69B6;
}
.notebook_app .tooltip.bottom-right .tooltip-arrow {
  border-bottom-color: #1B69B6;
}

.kb-data-main-panel {
    height: 100%;
    margin-bottom: 5px;
    max-height: 425px;
}

#kb-ws {
/*    background-color: #fff;
    width: 100%;
    padding-bottom: 5px;
    height: 425px !important;
*/}

#data-tabs {
    height: 375px !important;
}

.kb-ws-refresh-btn {
    position: absolute;
    right: 5px;

}

#kb-ws .form-control {
    width: 85%;
    margin: 3px;
}

.kb-data-control {
    width: 95%;
}

/* Data table */
.kb-data-table thead{
    max-width: 100%;
    width: 281px;
}
.kb-data-table {
    max-height: 265px;
    width: 100% !important;
}
.kb-data-table tbody tr {
    border-bottom: 1px solid gainsboro;
}

.kb-data-table tbody tr td {
    max-height: 16px;
    padding: 5px;
    font-size: 1em;
    max-width: 100px;
}

.kb-data-table tbody tr:hover, .kb-data-table tbody tr td.highlighted {
    background-color: #F4F5D6;
    cursor: pointer;
}

.kb-data-obj-name {
    text-overflow: ellipsis;
    overflow:hidden;
    white-space: nowrap;
    display: inline-block;
    max-width: 88%;
}

.kb-data-loading {
    height: 100%;
    vertical-align: middle;
    text-align: center
}

.kb-data-loading img {
    vertical-align: middle;
}

#kb-ws .dataTables_filter { display: none; }

/*------------------------------------------
 * View details on KBase objects
 *
 * Namespace: kb-data-obj
 */

/*  Button to activate the object pane */
button.kb-data-obj {
    float: right;
}
/* Panel */
.kb-data-obj-panel {
    background: linear-gradient(to bottom, #00d2ff, #B2ADCB);
    padding: 0;
    margin: 10px;
}
.kb-data-obj-panel button.close {
    margin: 5px;
    font-size: 125%;
}
.kb-data-obj-panel-info {
    background: rgba(255,255,255,0.5);
    height: 100%;
    padding: 10px;
}
.kb-data-obj-panel-graph {
    background: transparent;
    height: 100%;
    padding: 10px;
}
.kb-data-obj-panel-info dl {
    margin: 0;
}
.kb-data-obj-panel-info dl dt {
    float: left;
    clear: left;
    width: 90px;
    text-align: right;
    color: rgba(0, 0, 0, 0.5);
    /*padding: 0 0 5px 0;*/
}
.kb-data-obj-panel-info dl dt:after {
    content: ":";
}
.kb-data-obj-panel-info dl dd {
    margin: 0 0 0 100px;
    /*padding: 0 0 5px 0;*/
}
.kb-data-obj-panel-verlist span {
    padding: 0px 5px;
    margin-left: 3px;
    border-radius: 2px;
    background-color: rgba(255,255,255,0.5);
    color: rgba(0,0,0,0.5);
    cursor: pointer;
}
.kb-data-obj-panel-verlist span.selected {
    background-color: #2196F3;
    color: white;
    cursor: default;
}
.kb-data-obj-panel-graph table {
    background-color: rgba(255, 255, 255, 0.9);
    width: 100%;
    border: none;
    color: rgba(0, 0, 0, 0.8);
}
.kb-data-obj-panel-graph thead tr {
    background-color: rgb(230, 230, 230);
    color: rgba(0, 0, 0, 1);
}
.kb-data-obj-graph-ref-to {
    margin-top: 8px;
}

/*
 * END: View details on KBase objects
 *------------------------------------------
 */

/* default blue button in the new style */
.kb-primary-btn {
    background-color: #2196F3;
    border-radius: 1px;
    color: #fff;
    border: none;
    padding: 10px 20px;
    margin: 3px;
    font-size: 14px;
    font-family: "Roboto",Helvetica,Arial,sans-serif;
    font-weight: 400;
    box-shadow: 1px 1px 3px #aaa;
}
.kb-primary-btn:hover {
    background-color: #1E88E5;
}
.kb-primary-btn[disabled] {
    box-shadow: none;
    background-color: #BBDEFB;
    color: #fff;
}
/* gray button in the new style */
.kb-default-btn {
    background-color: #F5F5F5;
    border-radius: 1px;
    color: #555;
    border: none;
    padding: 10px 20px;
    margin: 3px;
    font-size: 14px;
    font-family: "Roboto",Helvetica,Arial,sans-serif;
    font-weight: 400;
    box-shadow: 1px 1px 3px #aaa;
}
.kb-default-btn:hover {
    background-color: #CECECE;
}
.kb-default-btn[disabled] {
    box-shadow: none;
    color: #aaa;
}

.kb-btn-sm {
    padding: 5px 10px;
    font-size: 13px;
}

/* card layout */
.narrative-card-row-main{
    display:flex;
}

.narrative-card-ellipsis{
    display:flex;
    align-items: center;
    justify-content: center;
}


.narrative-card-palette-icon{
    position: relative;
    color: '#888';
    left: -10px;
    top: -70px;
}
/* data list */
.kb-data-list-obj-row, .narrative-card-row-main{
    transition: all 0.1s ease;

    border-left-style: solid;
    border-left-width: 5px;
    border-left-color: #fff;
    color:#333;
    margin:2px;
    padding:4px;
    margin-bottom: 5px;

    box-shadow: 1px 1px 1px 1px #fff;
    -webkit-box-shadow: 1px 1px 1px 1px #fff;
    moz-box-shadow: 1px 1px 1px 1px #fff;

    width:98%;
}

.kb-function-dim .kb-data-list-obj-row {
    border-left-color: #eee;

}
/* ... */

